--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        restaurant['name']\n",
-    "        \n",
+    "    else\n",
+    "        alt\n",
     "    pass"
    ]
   },
