--- a/index.ipynb
+++ b/index.ipynb
@@ -157,7 +157,7 @@
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        restaurant['name']\n",
     "    else\n",
-    "        alt\n",
+    "        alternative['name']\n",
     "    pass"
    ]
   },
