Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -158,7 +158,8 @@
     "        restaurant['name']\n",
     "    else\n",
     "        alternative['name']\n",
-    "    pass"
+    "    pass\n",
+    "return "
    ]
   },
   {
