Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -155,9 +155,9 @@
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
-    "        restaurant['name']\n",
+    "        best = restaurant['name']\n",
     "    else\n",
-    "        alternative['name']\n",
+    "        best = alternative['name']\n",
     "    pass\n",
     "return "
    ]
