--- a/index.ipynb
+++ b/index.ipynb
@@ -165,7 +165,7 @@
     "def better_restaurant(restaurant, alternative):\n",
     "    if restaurant['rating'] > alternative['rating']:\n",
     "        best = restaurant['name']\n",
-    "    eltse\n",
+    "    else\n",
     "        best = alternative['name']\n",
     "    pass\n",
     "return best"
