--- a/index.ipynb
+++ b/index.ipynb
@@ -195,6 +195,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
+    "    if restaurant['']\n",
     "    pass"
    ]
   },
