--- a/index.ipynb
+++ b/index.ipynb
@@ -195,7 +195,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant[]\n",
+    "    if lenrestaurant['price']\n",
     "    pass"
    ]
   },
