--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,8 @@
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
-    "        cheaper = \n",
+    "        cheaper = alternative['name']\n",
+    "        \n",
     "    pass"
    ]
   },
