Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -197,7 +197,8 @@
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        cheaper = alternative['name']\n",
-    "        \n",
+    "        else:\n",
+    "            cheaper = restaurant['']\n",
     "    pass"
    ]
   },
