Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -198,7 +198,8 @@
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        cheaper = alternative['name']\n",
     "        else:\n",
-    "            cheaper = restaurant['']\n",
+    "            cheaper = restaurant['name']\n",
+    "        retu\n",
     "    pass"
    ]
   },
