--- a/index.ipynb
+++ b/index.ipynb
@@ -190,16 +190,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-15-83d635dbd0ee>, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-83d635dbd0ee>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
     "    if len(restaurant['price']) > len(alternative['price']):\n",
     "        cheaper = alternative['name']\n",
-    "        else:\n",
+    "    else:\n",
     "            cheaper = restaurant['name']\n",
-    "        retu\n",
+    "        return cheaper\n",
     "    pass"
    ]
   },
