--- a/index.ipynb
+++ b/index.ipynb
@@ -205,24 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-17-f633e17b0823>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheaper_restaurant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfork_fig\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'Frontier Restaurant'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheaper_restaurant\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfrontier_restaurant\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfork_fig\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# 'Frontier Restaurant'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: string indices must be integers"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Frontier Restaurant\n",
+      "Frontier Restaurant\n"
      ]
     }
    ],
    "source": [
     "print(cheaper_restaurant(fork_fig, frontier_restaurant)) # 'Frontier Restaurant'\n",
-    "print(cheaper_restaurant(frontier_restaurant, fork_fig)['name']) # 'Frontier Restaurant'"
+    "print(cheaper_restaurant(frontier_restaurant, fork_fig)) # 'Frontier Restaurant'"
    ]
   },
   {
