--- a/index.ipynb
+++ b/index.ipynb
@@ -293,7 +293,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_clo']\n",
+    "        if restaurant['is_closed'] == \n",
     "    pass"
    ]
   },
