--- a/index.ipynb
+++ b/index.ipynb
@@ -292,6 +292,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
+    "    open = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == True:\n",
     "            \n",
