Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,7 +294,7 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == True:\n",
+    "        if restaurant['is_closed'] == Fals:\n",
     "            \n",
     "    pass"
    ]
