Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -294,8 +294,8 @@
     "def open_restaurants(restaurants):\n",
     "    open = []\n",
     "    for restaurant in restaurants:\n",
-    "        if restaurant['is_closed'] == Fals:\n",
-    "            \n",
+    "        if restaurant['is_closed'] == False:\n",
+    "            open.append[restaurant]\n",
     "    pass"
    ]
   },
