Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -296,6 +296,8 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open.append[restaurant]\n",
+    "        else:\n",
+    "            \n",
     "    pass"
    ]
   },
