--- a/index.ipynb
+++ b/index.ipynb
@@ -296,7 +296,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open.append[restaurant]\n",
-    "        else:\n",
+    "    return \n",
     "    pass"
    ]
   },
