--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open.append[restaurant]\n",
-    "    return \n",
+    "    return open\n",
     "    pass"
    ]
   },
