--- a/index.ipynb
+++ b/index.ipynb
@@ -292,7 +292,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open = []\n",
+    "    not_ = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open.append[restaurant]\n",
