--- a/index.ipynb
+++ b/index.ipynb
@@ -292,10 +292,10 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    not_ = []\n",
+    "    not_closed = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            open.append[restaurant]\n",
+    "            not_closed.append[restaurant]\n",
     "    return open\n",
     "    pass"
    ]
