--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
     "    not_closed = []\n",
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            not_closed.append[restaurant]\n",
+    "            not_closed.append[restaurant['name']]\n",
     "    return not_closed\n",
     "    pass"
    ]
