Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -296,8 +296,8 @@
     "    for restaurant in restaurants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            not_closed.append[restaurant['name']]\n",
-    "    return not_closed\n",
-    "    pass"
+    "    pass\n",
+    "    return "
    ]
   },
   {
